# airflow-provider-anomaly-detection

./: .astro-registry.yaml  .example.env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: main.yaml  release.yaml  test.yaml
.github/workflows/: test.yaml
airflow_anomaly_detection/: __init__.py  asciigraph.py  utils.py
airflow_anomaly_detection/example_dags/: README.md  anomaly-detection.py
airflow_anomaly_detection/example_dags/anomaly-detection-dag/: README.md  anomaly-detection-dag.py
airflow_anomaly_detection/example_dags/bigquery_anomaly_detection_dag/: README.md  bigquery_anomaly_detection_dag.py
airflow_anomaly_detection/example_dags/snowflake_anomaly_detection_dag/: README.md  snowflake_anomaly_detection_dag.py
airflow_anomaly_detection/operators/: bigquery_metric_batch_score_operator.py  metric_batch_alert_operator.py  metric_batch_email_notify_operator.py  metric_batch_ingest_operator.py  metric_batch_score_operator.py  metric_batch_train_operator.py
airflow_anomaly_detection/operators/bigquery/: metric_batch_alert_operator.py  metric_batch_ingest_operator.py  metric_batch_score_operator.py  metric_batch_train_operator.py
anomaly-gallery/: README.md
anomaly_detection/: __init__.py
anomaly_detection/example_dags/: anomaly-detection.py
anomaly_detection/operators/: metric_batch_alert_operator.py  metric_batch_score_operator.py  metric_batch_train_operator.py
anomaly_gallery/: README.md
(+20 files in other folders)
